Solutions to exercise 5
